[package]
name = "xfcc_parser_ruby"
version = "0.1.0"
authors = ["Frederick Zhang <frederick888@tsundere.moe>"]
edition = "2021"
description = "Envoy x-forwarded-client-cert (XFCC) parser written in Rust for Ruby"
repository = "https://github.com/Frederick888/xfcc_parser_ruby/"
license = "BSD-3-Clause"
keywords = ["envoy", "xfcc", "http"]
categories = ["parser-implementations", "web-programming"]

[dependencies]
rutie = "0.8.4"
xfcc-parser = "0.1.1"

[lib]
name = "xfcc_parser_ruby"
crate-type = ["cdylib"]

[profile.release]
strip = "debuginfo"
